--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ python-multipart = "^0.0.5"
 PyJWT = "^2.2.0"
 bcrypt = "^3.2.0"
 passlib = "^1.7.4"
+email-validator = "^1.1.3"
 
 [tool.poetry.dev-dependencies]
 
