--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,15 @@
+#Database configurations
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=your_user
 POSTGRES_DB=your_database
 POSTGRES_PASSWORD=your_password
 
+#Mail Configurations
+MAIL_USERNAME=<GMAIL_USERNAME>
+MAIL_PASSWORD=<GMAIL_PASSWORD>
+MAIL_FROM=<SENDER_ADDRESS>
+MAIL_PORT=587
+MAIL_SERVER=smtp.gmail.com
+MAIL_FROM_NAME=<TITLE_FOR_MAIL>
 
