--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ PyJWT = "^2.2.0"
 bcrypt = "^3.2.0"
 passlib = "^1.7.4"
 email-validator = "^1.1.3"
+fastapi-mail = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
